<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.RegistroInfoUserActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutSuperior"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/constraintLayoutInferior"
        android:layout_margin="0dp"
        android:background="@color/white"
        android:elevation="15dp"
        >

        <ImageView
            android:id="@+id/backActivity2"
            android:layout_width="22dp"
            android:layout_height="42dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_baseline_arrow_back_30" />

        <TextView
            android:id="@+id/textView_FNR"
            android:layout_width="277dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/mensaje_FNR"
            android:textAlignment="center"
            android:textColor="@color/verde_2"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/imageViewProgress3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewProgress3"
            android:layout_width="188dp"
            android:layout_height="18dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/progress_3_2x" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutInferior"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutSuperior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="-95dp"
            tools:layout_editor_absoluteY="-87dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutInferiorScrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineV33"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.33" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineH59"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.59" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="96dp"
                    android:layout_height="139dp"
                    android:layout_marginTop="30dp"
                    app:layout_constraintEnd_toStartOf="@+id/guidelineV33"
                    app:layout_constraintHorizontal_bias="0.7"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/coink_policia_1_2x" />

                <TextView
                    android:id="@+id/textView_EMCDSPDC"
                    android:layout_width="207dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/mensaje_EMCDSPDC"
                    android:textAlignment="center"
                    android:textColor="@color/verde_2"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.4"
                    app:layout_constraintStart_toStartOf="@+id/guidelineV33"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView_SENQLDEC"
                    android:layout_width="226dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat_thin"
                    android:text="@string/mensaje_SENQLDEC"
                    android:textColor="@color/gris_80"
                    android:textSize="16dp"
                    app:layout_constraintEnd_toEndOf="@+id/textView_EMCDSPDC"
                    app:layout_constraintStart_toStartOf="@+id/textView_EMCDSPDC"
                    app:layout_constraintTop_toBottomOf="@+id/textView_EMCDSPDC" />

                <FrameLayout
                    android:id="@+id/frameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/verde_1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView4">

                </FrameLayout>

                <TextView
                    android:id="@+id/textView_LMI"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/mensaje_LMI"
                    android:textAlignment="center"
                    android:textColor="@color/verde_2"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

                <TextView
                    android:id="@+id/textView_LMIP1"
                    android:layout_width="369dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="25dp"
                    android:fontFamily="@font/montserrat_thin"
                    android:text="@string/mensaje_LMIP1"
                    android:textColor="@color/gris_80"
                    android:textSize="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_LMI" />

                <TextView
                    android:id="@+id/textView_LMIP2"
                    android:layout_width="369dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="25dp"
                    android:fontFamily="@font/montserrat_thin"
                    android:text="@string/mensaje_LMIP2"
                    android:textColor="@color/gris_80"
                    android:textSize="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_LMIP1" />

                <TextView
                    android:id="@+id/textView_LMIP3"
                    android:layout_width="369dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="25dp"
                    android:fontFamily="@font/montserrat_thin"
                    android:text="@string/mensaje_LMIP3"
                    android:textColor="@color/gris_80"
                    android:textSize="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_LMIP2" />

                <TextView
                    android:id="@+id/textView_LMIP4"
                    android:layout_width="369dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="25dp"
                    android:fontFamily="@font/montserrat_thin"
                    android:text="@string/mensaje_LMIP4"
                    android:textColor="@color/gris_80"
                    android:textSize="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_LMIP3" />

                <TextView
                    android:id="@+id/textView_LTC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/mensaje_LTC"
                    android:textAlignment="center"
                    android:textColor="@color/verde_2"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_LMIP4" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/checkboxAceptarContrato"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="false"
                    android:text="@string/mensaje_AceptarContrato"
                    android:buttonTint="@color/verde_1"
                    android:textColor="@color/verde_2"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView_LTC"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnAceptar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_efecto_btn_siguiente"
                    android:elevation="10dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/mensaje_Aceptar"
                    android:textColor="@color/gris_80"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textAllCaps="false"
                    android:padding="16dp"
                    android:enabled="false"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="15dp"
                    app:layout_constraintTop_toBottomOf="@+id/checkboxAceptarContrato"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>