<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.view.IngresoActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.225"
        app:srcCompat="@drawable/img_coink_1_1x" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="277dp"
        android:layout_height="63dp"
        android:layout_marginTop="37dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/slogan"
        android:textAlignment="center"
        android:textColor="@color/verde_1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ButtonRegistrarse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/verde_1"
        android:elevation="10dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/registrarse"
        android:textColor="@color/verde_2"
        android:textStyle="bold"
        android:textSize="14sp"
        android:padding="16dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ButtonIngresar"
        style="@style/Widget.Material3.Button.ElevatedButton"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ButtonIngresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/verde_2"
        android:elevation="10dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/ingresa"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="14sp"
        android:padding="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.Material3.Button.ElevatedButton"
        />

</androidx.constraintlayout.widget.ConstraintLayout>